fix: password alignment

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -112,6 +112,7 @@ main div {
   font-size: 1rem;
   line-height: 2;
   font-weight: 500;
+  text-align: center;
 
   white-space: nowrap;
   overflow: hidden;
